--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,10 @@ button {
     margin: 5px 5px;
     cursor: pointer;
 }
+button:hover {
+    background: rgba(89, 89, 89, 1);
+    transition: 1s;
+}
 
 /* <----------- MOBILE FIRST -----------> */
 
@@ -280,10 +284,7 @@ main {
 
 }
 
-#hero button:hover {
-    background: rgba(89, 89, 89, 1);
-    transition: 1s;
-}
+
 
 /* END HERO SECTION */
 
@@ -336,10 +337,6 @@ main {
     margin: 60px 0 25px 0;
 }
 
-#filters button:hover {
-    background: rgba(89, 89, 89, 1);
-    transition: 1s;
-}
 
 /* DEZE CLASS WORDT ALLEEN IN WERKING GEBRACHT ACHTER HIJ GEKLIKT IS GEWEEST VIA JS */
 .selected {
@@ -378,6 +375,7 @@ main {
     height: 100%;
     background: rgba(255, 103, 96, 0.8);
     padding: 13px;
+
 }
 
 .img_container:hover .img_overlay_mobile {
