--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,10 @@ main {
     cursor: pointer;
 
 }
+#hero button:hover{
+    background: rgba(89, 89, 89, 1);
+    transition: 1s;
+}
 
 
 
@@ -374,6 +378,12 @@ main {
     width: 100%;
     height: 100%;
     background: rgba(255, 103, 96, 0.8);
+    padding: 13px;
+
+}
+.img_overlay_mobile:hover button {
+    background: rgba(89, 89, 89, 1);
+    transition: 1s;
     padding: 13px;
 
 }
